bedrock-dev/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bedrock-dev
    type: web
  name: bedrock-dev-web
  namespace: bedrock-dev
  selfLink: /apis/extensions/v1beta1/namespaces/bedrock-dev/deployments/bedrock-dev-web
spec:
  replicas: 5
  selector:
    matchLabels:
      app: bedrock-dev
      type: web
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bedrock-dev
        type: web
      name: bedrock-dev-web
      namespace: bedrock-dev
    spec:
      containers:
      - args:
        - ./bin/run.sh
        command:
        - /bin/bash
        - -c
        image: mozorg/bedrock:master-08c3e8aa55d4603959acbdb8953da3c7df0db6b6
        imagePullPolicy: IfNotPresent
        name: bedrock-dev-web
        ports:
          - containerPort: 8000
        readinessProbe:
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
            path: /readiness/
            scheme: HTTP
            port: 8000
        resources:
          limits:
            cpu: 500m
            memory: 300Mi
          requests:
            cpu: 250m
            memory: 120Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
