bedrock-dev/git-sync-operator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bedrock-dev-git-sync-operator
  namespace: bedrock-dev
  labels:
    app: bedrock-dev-git-sync-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrock-dev-git-sync-operator
  template:
    metadata:
      labels:
        app: bedrock-dev-git-sync-operator
    spec:
      serviceAccountName: bedrock-dev-git-sync-operator
      containers:
      - image: mozmeao/git-sync-operator:2da4ec0
        name: git-sync-operator
