bedrock-dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bedrock-dev
  name: bedrock-dev-nodeport
  namespace: bedrock-dev
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: bedrock-dev
    type: web
  sessionAffinity: None
  type: NodePort
